Cut down - dbContext errors - cant connect to localDB?

--- a/SeoSearcher/Views/Shared/_Layout.cshtml
+++ b/SeoSearcher/Views/Shared/_Layout.cshtml
@@ -18,25 +18,6 @@
 </head>
 <body>
 
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar">x</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Seo Search", "Index", "SeoSearch")</li>
-                    </ul>
-                </div>
-            </div>
-        </div>*@
-
     <div class="jumbotron">
         <div class="container body-content ">
             <div class="">
@@ -45,15 +26,11 @@
                         SeoSearcher
                     </a>
                 </h1>
-                <a class="btn btn-primary btn-lg" href="@Url.Action("FavSearch", "SeoSearch")">
+            </div>
+                <a class="btn btn-primary btn-lg" href="@Url.Action("RunFavourite", "SeoSearch")">
                     @*@Html.ActionLink("Favourite", "SeoSearch", "SeoSearch")"*@
                     <span class="lead">Run favorite Seo Search &raquo;</span>
-
                 </a>
-            </div>
-            @*<div class="col-md-6">
-                </div>*@
-
         </div>
     </div>
 
