--- a/SeoSearcher/Views/SeoSearch/Index.cshtml
+++ b/SeoSearcher/Views/SeoSearch/Index.cshtml
@@ -1,34 +1,13 @@
-﻿@using System.Data.Entity.ModelConfiguration.Conventions
-@using System.Diagnostics.Eventing.Reader
-@using SeoSearcher.Models
-@model SeoSearcher.Models.ViewModels.SeoSearchResultsViewModel
+﻿@model SeoSearcher.Models.ViewModels.SeoSearchResultsViewModel
 @{
     ViewBag.Title = "SeoSearch";
 }
-@*<h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>*@
 
 <style>
     .primay-color {
         color: blue;
     }
 </style>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <div class="pull-right">
-            @Html.ActionLink("Make Favourite", "SaveFavourite", "SeoSearch", new FavSearch
-            {
-                KeyWords = Model.SeoSearch.KeyWords,
-                TargetUrl = Model.SeoSearch.TargetUrl
-            },
-            new { @class = "btn btn-warning btn-md" })
-        <button class="btn btn-info btn-md">
-            Save Search
-        </button>
-    </div>
-}
 
 <h2>
     SEO keywords:
