--- a/SeoSearcher/Views/SeoSearch/Index.cshtml
+++ b/SeoSearcher/Views/SeoSearch/Index.cshtml
@@ -18,16 +18,28 @@
 {
     @Html.AntiForgeryToken()
     <div class="pull-right">
-            @Html.ActionLink("Make Favourite", "SaveFavourite", "SeoSearch", new FavSearch
-            {
-                KeyWords = Model.SeoSearch.KeyWords,
-                TargetUrl = Model.SeoSearch.TargetUrl
-            },
-            new { @class = "btn btn-warning btn-md" })
+
+        <input type="submit" value="SaveFavourite" class="btn btn-default" formaction="post" />
+
+        @*@Html.ActionLink("Make Favourite", "SaveFavourite", "SeoSearch", new FavSearch
+        {
+            KeyWords = Model.SeoSearch.KeyWords,
+            TargetUrl = Model.SeoSearch.TargetUrl
+        },
+            new {@class = "btn btn-warning btn-md"})*@
         <button class="btn btn-info btn-md">
             Save Search
         </button>
     </div>
+}
+
+@using (Html.BeginForm("SaveFavourite", "SeoSearch",Model.SeoSearch))
+{
+    @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(m => Model.SeoSearch.KeyWords)
+    @Html.HiddenFor(m => Model.SeoSearch.TargetUrl)
+    <input type="submit" value="Match" />
 }
 
 <h2>
