--- a/SeoSearcher/Views/Home/Index.cshtml
+++ b/SeoSearcher/Views/Home/Index.cshtml
@@ -1,47 +1,45 @@
 ﻿@model SeoSearcher.Models.ViewModels.HomeViewModel
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Search";
 }
 
-
-    <div class="row">
-        <div class="col-md-12">
-            @using (Html.BeginForm())
+<div class="row">
+    <div class="col-md-12">
+        @using (Html.BeginForm())
             {
-                @Html.AntiForgeryToken()
+            @Html.AntiForgeryToken()
 
-                <div class="form-inline">
-                    @*<h4>Perform new SEO Search</h4>
-                        <hr />*@
-                    @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+            <div class="form-inline">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.NewSearch.KeyWords, htmlAttributes: new {@class = "control-label "})
-                        <div class="">
-                            @Html.EditorFor(model => model.NewSearch.KeyWords, new
-                            {
-                                htmlAttributes = new {@class = "form-control", @value = "Test"}
-                            })
-                            @Html.ValidationMessageFor(model => model.NewSearch.KeyWords, "", new {@class = "text-danger"})
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="targetUrl" class="control-label">Target URL</label>
-                        <div class="" id="targetUrl">
-                            @Html.EditorFor(model => model.NewSearch.TargetUrl, new {htmlAttributes = new {@class = "form-control"}})
-                            @Html.ValidationMessageFor(model => model.NewSearch.TargetUrl, "", new {@class = "text-danger"})
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label">&nbsp;</label>
-                        <div class="">
-                            <input type="submit" value="Search" class="btn btn-default"/>
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.NewSearch.KeyWords, htmlAttributes: new { @class = "control-label " })
+                    <div class="">
+                        @Html.EditorFor(model => model.NewSearch.KeyWords, new
+                       {
+                           htmlAttributes = new { @class = "form-control", @value = "Test" }
+                       })
                     </div>
                 </div>
-            }
-        </div>
+
+                <div class="form-group">
+                    <label for="targetUrl" class="control-label">Target URL</label>
+                    <div class="" id="targetUrl">
+                        @Html.EditorFor(model => model.NewSearch.TargetUrl, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label">&nbsp;</label>
+                    <div class="">
+                        <input type="submit" value="Search" class="btn btn-default" />
+                    </div>
+                </div>
+
+            </div>
+                @Html.ValidationMessageFor(model => model.NewSearch.KeyWords, "", new { @class = "text-danger" })<br />
+                @Html.ValidationMessageFor(model => model.NewSearch.TargetUrl, "", new { @class = "text-danger" })
+        }
     </div>
+</div>
 
