--- a/SeoSearcher/Views/Home/Index.cshtml
+++ b/SeoSearcher/Views/Home/Index.cshtml
@@ -1,44 +1,57 @@
-﻿@model SeoSearcher.Models.ViewModels.HomeViewModel
+﻿@using System.ComponentModel.DataAnnotations
+@model SeoSearcher.Models.ViewModels.HomeViewModel
 @{
     ViewBag.Title = "Search";
+
+    if (IsPost)
+    {
+        ViewBag.Title = "POST";
+    }
 }
 
 <div class="row">
+
     <div class="col-md-12">
+
+        <div class="alert alert-info">
+            *Please only enter domain in Target URL field, leaving off "www"/"http://" etc to ensure accurate results. <br/> For example "infotrack.com.au"
+        </div>
+
+
         @using (Html.BeginForm())
-            {
+        {
             @Html.AntiForgeryToken()
 
             <div class="form-inline">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.NewSearch.KeyWords, htmlAttributes: new { @class = "control-label " })
+                    @Html.LabelFor(model => model.NewSearch.KeyWords, htmlAttributes: new {@class = "control-label "})
                     <div class="">
                         @Html.EditorFor(model => model.NewSearch.KeyWords, new
-                       {
-                           htmlAttributes = new { @class = "form-control", @value = "Test" }
-                       })
+                        {
+                            htmlAttributes = new {@class = "form-control"}
+                        })
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="targetUrl" class="control-label">Target URL</label>
                     <div class="" id="targetUrl">
-                        @Html.EditorFor(model => model.NewSearch.TargetUrl, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.NewSearch.TargetUrl, new {htmlAttributes = new {@class = "form-control"}})
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label">&nbsp;</label>
                     <div class="">
-                        <input type="submit" value="Search" class="btn btn-default" />
+                        <input type="submit" value="Search" class="btn btn-primary"/>
                     </div>
                 </div>
 
             </div>
-                @Html.ValidationMessageFor(model => model.NewSearch.KeyWords, "", new { @class = "text-danger" })<br />
-                @Html.ValidationMessageFor(model => model.NewSearch.TargetUrl, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.NewSearch.KeyWords, "", new {@class = "text-danger"})<br/>
+            @Html.ValidationMessageFor(model => model.NewSearch.TargetUrl, "", new {@class = "text-danger"})
         }
     </div>
 </div>
